--- a/searchPage.html
+++ b/searchPage.html
@@ -2,7 +2,8 @@
 	<head>
 		<link rel="stylesheet" href="search.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
-		<script src="autoComplete.js"></script>
+		<script src="autoComplete.js">
+		</script>
 		
 
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
